# mor-reactive-transport

./: .gitmodules  README.md  default.opts
dune-ultraweak/: CMakeLists.txt  dune.module
dune-ultraweak/dune/ultraweak/: H1bnorm.hh  parametricCoefficientsWrapper.hh  refinementadapter.hh  solvingManager.hh  testutil.hh  upwindDGsolver.hh
dune-ultraweak/dune/ultraweak/darcy-velocity/: catalysatorProblems.hh  constraints.hh  darcyMixedSolver.hh  darcySIPGSolver.hh  darcyVelocityAdapter.hh  discreteGridFunctionFlux.hh  utility.hh
dune-ultraweak/dune/ultraweak/py/: bindings.hh  parameter_tree.hh  solve_transport_normal_eq.hh
dune-ultraweak/dune/ultraweak/test/: CMakeLists.txt  conv_test_parameters.ini  debug_parameters.ini  problems.hh  runAllConvergenceTests.cc  runConvergenceTest.cc  solveDarcySIPG.cc  solveNormalEq.cc  solveNormalEq.hh  solve_darcy_mixed.cc  solve_transport_dg.cc  solve_transport_normal_eq_separated.cc  solver_config.ini
dune-ultraweak/dune/ultraweak/transport/: defaultParametrization.hh  discreteGridFunctionReconstruction.hh  normalEqLocalOperator.hh  normalEqSolver.hh  parametrizedSolver.hh  traits.hh
dune-ultraweak/python/: CMakeLists.txt  compute_example_solutions.py  pyenv.sh.in  run_all_greedy_tests.py  test_norms.py
dune-ultraweak/python/common/: CMakeLists.txt  configs.py  discretizer.py  greedy.py  pod.py  pymor_classes.py  testing_utility.py
dune-ultraweak/src/: CMakeLists.txt  pyultraweak-interactive.cc
